# haskell-nix-template

./: LICENSE  Makefile  foobar.cabal  shell.nix
app/: Main.hs
nix/: entrypoint  release.nix  sources.nix
src/: FooBar.hs
test/: FooBarTest.hs
