cabal-version:      2.4
name:               foobar
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Paweł Placzyński
maintainer:         placzynski.pawel@gmail.com

library
    exposed-modules:  FooBar
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable foobar
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , foobar
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite foobar-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          FooBarTest.hs
    build-depends:    base ^>=4.14.1.0
